Sat Sep 13 14:32:15 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* config.sdefault: Use output of gnatls to find the right include
	and object directories. Also output the path to libgnat.a when
	used with the 'pathtolib' argument. Make it work with a
	non-standard or cross installation.

Fri Sep 12 18:52:20 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb, xe_scan.adb, xe_lead.adb, xe_build.adb,
	xe_back.adb, xe_stubs.adb, xe_check.adb: Fix output message.

Wed Sep  3 20:19:31 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_utils.ads, xe_utils.adb: Add Message procedure and remove
 	Write_Message (more general). Add Strip_Unit_Suffix to remove
	%[bs] suffixes in a unit name.

	* xe_back.ads, xe_back.adb: Change More_Recent_Stamp into
 	Most_Recent_Stamp. Add a boolean parameter to Set_Light_PCS. Use
 	new Message procedure to reduce code.

	* xe_build.adb, xe_lead.adb, xe_scan.adb, xe_check.adb: Use new
 	Message procedure.

	* xe_stubs.adb, xe_stubs.adb: Use new Message
 	procedure. Optimization of recompilation due to stamp
 	inconsistency. Add procedure Mark_Units_On_Partition.

Fri Aug 29 21:45:27 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb, xe_back.adb, xe_back.ads, xe_check.adb,
	xe_stubs.ads: Move the code such a way that gnatdist output
	indicates that a light PCS is used.

Fri Aug 29 20:14:48 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_stubs.adb: Detect if a partition includes a RCI package or
 	may declare a RACW variable. If this is not the case, then set
	Has_RCI_Pkg_Or_RACW_Var to false.

Tue Aug 12 17:54:28 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.ads, xe_back.adb: Remove Default_Host which was not
 	initialized but still used.

	* xe_lead.adb, xe_stubs.adb: Suppress useless function calls.

	* xe_parse.adb: Add some tree debugging information.

Tue Aug 12 13:08:02 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* config.sdefault: libgnat.a is now located under adalib.
